fix : image alignement on small displays

--- a/assets/css/extended/extra.css
+++ b/assets/css/extended/extra.css
@@ -23,6 +23,7 @@
     /* align-items: flex-end; */
     width: 35%;
     margin-right: 3%;
+    align-self: center;
 }
 
 .project-go-to-repo {
@@ -36,7 +37,7 @@
     box-shadow: 0 1px 0;
 }
 
-.project-go-to-repo a {
+.project-info a {
     margin: auto 0;
     border-radius: 0;
     box-shadow: 0 -1px 0 var(--primary) inset;
